<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:background="@drawable/task_item_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/taskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_regular"
            android:textColor="@color/dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/isCurrentTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:text="@string/current_task"
            android:textAlignment="textEnd"
            android:textColor="@color/middle_gray"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/orderDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:text=" • "/>
        <TextView
            android:id="@+id/arrival_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/stolzl_book"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/task_route_bg"
        android:layout_marginTop="12dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <View android:layout_height="6dp" android:layout_width="6dp"
                android:layout_gravity="center"
                android:background="@drawable/blank_ellipse"/>
            <TextView
                android:id="@+id/routeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/stolzl_book"
                android:textSize="14sp"
                android:textColor="@color/dark" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <View android:layout_height="6dp" android:layout_width="6dp"
                android:layout_gravity="center"
                android:background="@drawable/black_ellipse"/>
            <TextView
                android:id="@+id/routeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="@font/stolzl_book"
                android:textSize="14sp"
                android:textColor="@color/dark" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details"
        android:fontFamily="@font/stolzl_book"
        android:textColor="@color/bia_gray_color_1"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/orderDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzl_book"
        android:textColor="@color/dark"
        android:textSize="14sp"/>

    <TextView
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment_options"
        android:fontFamily="@font/stolzl_book"
        android:textColor="@color/bia_gray_color_1"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/paymentOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/stolzl_book"
        android:textColor="@color/dark"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/viewDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        style="@style/button_dark"
        android:text="@string/view_details"
        android:fontFamily="@font/stolzl_book"
        android:textSize="14sp"/>

</LinearLayout>